Python+Java refactored